--- a/Contact.html
+++ b/Contact.html
@@ -26,11 +26,11 @@
         </div>
 
 
-        <div class="search-container">
+<!--         <div class="search-container">
             <input type="text" placeholder="Enter a destination or keyword" class="search-input" id="searchInput">
             <button class="btn btn1" onclick="fetchData()"><i class="fas fa-search"></i> Search</button>
             <button class="btn btn2" onclick="resetSearch()"><i class="fas fa-times"></i> Clear</button>
-        </div>
+        </div> -->
 
     </nav>
 
